--- a/CyberTutorial.WebApp/Views/Shared/Register/RegisterEmployeePartial.cshtml
+++ b/CyberTutorial.WebApp/Views/Shared/Register/RegisterEmployeePartial.cshtml
@@ -143,7 +143,7 @@
                 </div>
                 <div class="row">
                     <div class="col-4 d-grid mx-auto">
-                        <button type="button" class="btn btn-lg sucess-button-background rounded-pill" data-bs-dismiss="modal">OK</button>
+                        <button type="button" class="btn btn-lg btn-success rounded-pill" data-bs-dismiss="modal">OK</button>
                     </div>
                 </div>
             </div>
