--- a/CyberTutorial.WebApp/wwwroot/css/company.css
+++ b/CyberTutorial.WebApp/wwwroot/css/company.css
@@ -17,13 +17,13 @@
     align-items: center;
 }
 
-.sidebar-link .right-icon {
-    display: inline-flex;
-}
+    .sidebar-link .right-icon {
+        display: inline-flex;
+    }
 
-.sidebar-link[aria-expanded="true"] .right-icon {
-    transform: rotate(180deg);
-}
+    .sidebar-link[aria-expanded="true"] .right-icon {
+        transform: rotate(180deg);
+    }
 
 @media (min-width: 992px) {
     body {
@@ -33,7 +33,7 @@
     main {
         margin-left: var(--offcanvas-width);
     }
-    
+
     /* this is to remove the backdrop */
     .offcanvas-backdrop::before {
         display: none;
@@ -48,13 +48,13 @@
     }
 }
 
-/*.card {
+.card {
     margin: 10px 0;
 }
 
 .card {
     border-radius: 0px !important;
-}*/
+}
 
 .card {
     display: inline-block;
@@ -129,9 +129,9 @@
     position: relative;
 }
 
-.card .card-content .category {
-    margin-bottom: 10px;
-}
+    .card .card-content .category {
+        margin-bottom: 10px;
+    }
 
 .card .category:not([class*="text-"]) {
     color: white;
