--- a/CyberTutorial.WebApp/Views/Shared/_Layout.cshtml
+++ b/CyberTutorial.WebApp/Views/Shared/_Layout.cshtml
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Cyber Tutorial</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
-    <link rel="stylesheet" href="~/CyberTutorial.WebApp.styles.css" />
-   
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container">
@@ -44,71 +42,80 @@
         </nav>
     </header>
 
-    <main class="flex-shrink-0">
+    <main class="mt-5 pt-3">
         <div class="container-fluid">
             @RenderBody()
         </div>
     </main>
 
-    <footer class="footer mt-auto bg-dark p-lg-4">
+    <footer class="mt-auto p-3 bg-dark">
         <div class="container">
-            <div class="row g-lg-0 text-white text-center justify-content-center">
-                <h5>Subscribe to our newsletter</h5>
-                <p>Monthly digest of whats new and exciting from us.</p>
-                <div class="col-lg-4">
-                    <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+            <div class="row g-3 justify-content-center mb-3">
+                <div class="col-auto">
+                    <a class="text-white" href="https://www.google.com">
+                        <i class="fa-brands fa-2x fa-twitter"></i>
+                    </a>
                 </div>
-                <div class="col-lg-auto">
-                    <button class="btn btn-primary" type="button">Subscribe</button>
+                <div class="col-auto">
+                    <a class="text-white" href="https://www.google.com">
+                        <i class="fa-brands fa-2x fa-instagram"></i>
+                    </a>
                 </div>
-                <div class="row g-lg-3 justify-content-center">
-                    <div class="col-lg-auto">
-                        <a class="text-white" href="https://www.google.com">
-                            <i class="fa-brands fa-2x fa-twitter"></i>
-                        </a>
-                    </div>
-                    <div class="col-lg-auto">
-                        <a class="text-white" href="https://www.google.com">
-                            <i class="fa-brands fa-2x fa-instagram"></i>
-                        </a>
-                    </div>
-                    <div class="col-lg-auto">
-                        <a class="text-white" href="https://www.google.com">
-                            <i class="fa-brands fa-2x fa-linkedin"></i>
-                        </a>
-                    </div>
-                </div>
-                <nav class="navbar navbar-expand-md navbar-dark justify-content-center">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Pricing" asp-action="Index">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="FAQ" asp-action="Index">FAG</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="AboutUs" asp-action="Index">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Contact" asp-action="Index">Contact</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="row text-center">
-                    <p class="text-white fw-lighter">©2022 Cyber Tutorial</p>
+                <div class="col-auto">
+                    <a class="text-white" href="https://www.google.com">
+                        <i class="fa-brands fa-2x fa-linkedin"></i>
+                    </a>
                 </div>
             </div>
+            <nav class="navbar navbar-expand navbar-dark bg-dark justify-content-center">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Pricing" asp-action="Index">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="FAQ" asp-action="Index">FAG</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="AboutUs" asp-action="Index">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Contact" asp-action="Index">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="container text-center text-muted pb-1">
+                <small>Copyright &copy; CyberTutorials</small>
+            </div>
+            @*<div class="row g-0 text-white text-center justify-content-center">
+                <h5>Subscribe to our newsletter</h5>
+                <p>Monthly digest of whats new and exciting from us.</p>
+                <div class="col-lg-4 col-sm-auto">
+                    <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                </div>
+                <div class="col-auto">
+                    <button class="btn btn-primary" type="button">Subscribe</button>
+                </div>
+            </div>*@
         </div>
     </footer>
-    
+
+    <partial name="~/Views/Shared/Login/LoginPartial.cshtml" model="@new LoginModel()" />
+    <partial name="~/Views/Shared/Register/RegisterPartial.cshtml" model="@new RegisterModel()" />
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/lib/Chart.js/chart.js"></script>
+    <script src="~/lib/Chartjs-plugin-datalabels/chartjs-plugin-datalabels.min.js"></script>
+    <script src="~/js/utils.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/auth/login.js" asp-append-version="true"></script>
+    <script src="~/js/company/register/register-cmp.js" asp-append-version="true"></script>
+    <script src="~/js/employee/register/register-emp.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
