--- a/CyberTutorial.WebApp/Views/_ViewImports.cshtml
+++ b/CyberTutorial.WebApp/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using CyberTutorial.WebApp
 @using CyberTutorial.WebApp.Models
+@using CyberTutorial.WebApp.Models.Employee;
 @using CyberTutorial.Contracts.Enums
 @using CyberTutorial.WebApp.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
