--- a/CyberTutorial.WebApp/wwwroot/css/site.css
+++ b/CyberTutorial.WebApp/wwwroot/css/site.css
@@ -1,12 +1,7 @@
 body {
-    font-family: Verdana, sans-serif !important;
+    font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
     background: linear-gradient(to right, #283048 0%, #859398 51%, #283048 100%) 0 0 / 1000%;
     animation: gradientAnimation 10s ease infinite;
-}
-
-main > .container, main > .container-fluid {
-    padding: 0;
-    margin-top: 64px;
 }
 
 @keyframes gradientAnimation {
@@ -23,13 +18,22 @@ main > .container, main > .container-fluid {
     }
 }
 
+@media (min-width: 992px) {
+    body {
+        overflow: auto !important;
+    }
+}
+
 .navbar a {
     color: #E6E6E6;
+    font-size: 1.4vh;
+    margin-top: 5px;
 }
 
 .navbar .nav-item .nav-link {
     position: relative;
     margin-right: 10px;
+    font-size: 1.2vh;
 }
 
 .navbar .nav-item .nav-link::before {
@@ -49,6 +53,20 @@ main > .container, main > .container-fluid {
     transform: scale(1);
 }
 
+.nav-link {
+    color: gray;
+    background-color: transparent !important;
+}
+
+.nav-link:hover {
+    color: white;
+}
+
+.nav-link.active {
+    color: #0DCAF0 !important;
+    background-color: transparent !important;
+}
+
 hr {
     min-height: 0px !important;
     max-height: 10px !important;
@@ -56,13 +74,9 @@ hr {
     opacity: 0.8 !important;
 }
 
-.container-style {
-    background: linear-gradient(to right, #b721ff 0%, #b721ff 50%, #21d4fd 100%);
-}
-
 .carousel-img-style {
     width: 100%;
-    height: 1000px;
+    height: 100%;
 }
 
 .tick-mark-style {
@@ -71,11 +85,6 @@ hr {
     width: 3em;
     height: 3em;
     display: flex;
-}
-
-.card-title-style {
-    text-decoration: underline;
-    text-underline-offset: 10px;
 }
 
 .error-toast-style {
