Updated the project nuget packages Updated Domain.Entities Modified Home Page cards text Modified login page header text and removed email label. Removed comments from layout page. Renamed Owner entity to Administrator Entity Added dark layout for input date time.

--- a/CyberTutorial.WebApp/Views/Home/Index.cshtml
+++ b/CyberTutorial.WebApp/Views/Home/Index.cshtml
@@ -173,7 +173,7 @@
             <div class="card h-100">
                 <div class="card-header">
                     <span><i class="fa-solid fa-2xl fa-earth"></i></span>
-                    <p class="fs-4 d-inline p-0">ENABLE AN INCLUSIVE LEARNING CULTURE</p>
+                    <p class="modal-title d-inline p-0">ENABLE AN INCLUSIVE LEARNING CULTURE</p>
                 </div>
                 <div class="card-body">
                     <p>
@@ -186,7 +186,7 @@
             <div class="card h-100">
                 <div class="card-header">
                     <span><i class="fa-solid fa-2xl fa-angles-right"></i></span>
-                    <p class="fs-4 d-inline p-0">ALIGN TO COMPLIANCE FRAMEWORKS</p>
+                    <p class="modal-title d-inline p-0">ALIGN TO COMPLIANCE FRAMEWORKS</p>
                 </div>
                 <div class="card-body">
                     <p>
@@ -199,7 +199,7 @@
             <div class="card h-100">
                 <div class="card-header">
                     <span><i class="fa-solid fa-2xl fa-cloud-arrow-up"></i></span>
-                    <p class="fs-4 d-inline p-0">DEPLOY IN MINUTES</p>
+                    <p class="modal-title d-inline p-0">DEPLOY IN MINUTES</p>
                 </div>
                 <div class="card-body">
                     <p>
@@ -212,7 +212,7 @@
             <div class="card h-100">
                 <div class="card-header">
                     <span><i class="fa-solid fa-2xl fa-file-circle-check"></i></span>
-                    <p class="fs-4 d-inline p-0">ENHANCE CONTENT RETENTION</p>
+                    <p class="modal-title d-inline p-0">ENHANCE CONTENT RETENTION</p>
                 </div>
                 <div class="card-body">
                     <p>
