Added Xunit Testing for CyberTutorial.API: Including Authentication (Company only).

--- a/CyberTutorial.WebApp/Views/AboutUs/Index.cshtml
+++ b/CyberTutorial.WebApp/Views/AboutUs/Index.cshtml
@@ -2,49 +2,46 @@
     ViewData["Title"] = "About Us";
 }
 
-<div class="container">
-    <div class="row pt-lg-5">
+<div class="container mt-5">
+    <div class="row">
         <div class="col">
-            <p class="text-white display-3 fw-bold">Our Vision</p>
+            <p class="text-white display-3 fw-bold">Our Story</p>
         </div>
     </div>
-    <div class="row pt-lg-2">
-        <div class="col-lg-7">
+    <div class="row">
+        <div class="col-lg-7 col-auto pt-2">
             <p class="text-white fs-6 fw-normal">
-                Whirlwind FX was founded by PC gamers who wanted to democratize the gaming experience melding hardware with software. We thrive to provide hardware and accessories engineered to push the boundaries of elite performance, premium quality, affordability, and immersion.
+                Ambitious higher college of technology students who have high hopes for the future in raising cyber security awareness to protect organizations from the latest incidents caused by human error.
             </p>
         </div>
     </div>
-    <div class="row pt-lg-2">
-        <div class="col-lg-7">
+    <div class="row">
+        <div class="col-lg-7 col-auto pt-2">
             <p class="text-white fs-6 fw-normal">
-                Our mission is to develop fully-immersive experiences that add next-level presence and depth. The thrill of the sensation will unlock a new way to game, watch a video, and experience digital media.
+                We had to solve a problem for our graduation project. we decided to create a platform, to help employees know their capabilities and weaknesses in cyber security,
+                Security awareness for employees is the most important thing that can be provided to them to avoid any danger that occurs.
             </p>
         </div>
     </div>
-    <div class="row pt-lg-2">
-        <div class="col-lg-7">
+    <div class="row">
+        <div class="col-lg-7 pt-2">
             <p class="text-white fs-6 fw-normal">
-                Our claim to fame is Vortx, the first wind and heat machine that works with any game. Then we turned to mechanical keyboards using our deep technological advantage. The Element is the only RGB LED keyboard that can respond to any game or video with dynamic RGB effects.
+                Our end-to-end corporate cyber security training platform is driven by data science and is proven to change employee behavior, decrease employee high-risk groups by 82%.   
             </p>
         </div>
     </div>
-    <div class="row pt-lg-3">
-        <div class="col-lg-6">
-            <p class="text-white fs-6 fw-bold fst-italic">
-                Immerse yourself and upgrade your battlestation.
-            </p>
+    <div class="row">
+        <div class="col pt-2">
+            <p class="text-white display-3 fw-bold">How It Works</p>
         </div>
     </div>
-    <div class="row pt-lg-3">
-        <div class="col-lg-6">
-            <p class="text-white fs-6 fw-bold fst-italic">
-                Join us in revolutionizing gaming forever.
-            </p>
+    <div class="row">
+        <div class="col-lg-7 pt-2">
+
         </div>
     </div>
 </div>
-
+@*
 <div class="container">
     <div class="row pt-lg-5">
         <div class="col">
@@ -123,4 +120,4 @@
             </p>
         </div>
     </div>
-</div>
+</div>*@
